//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Fixes:
        - "Map generated" entities that don't generate in any locations could break automation analysis.
----------------------------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: November 21st 2024
    Features:
        - Add dependency information for tree and resource spawns, fluid pumping, and asteroid mining.
        - (SA) Locations (except nauvis) are now part of the default milestone list.
        - Milestone overlays can be displayed on inaccessible objects.
        - With 22+ milestones, tooltip headers don't draw them unnecessarily overlapped, and can use multiple lines.
    Fixes:
        - Hide blueprint parameters and tiles from the Dependency Explorer and NEIE.
        - Hide blueprint parameters and the synthetic I and O items from more selection windows.
    Internal changes:
        - Dependency and automation analysis allows more ORs, e.g. "(spawner and capture-ammo) or item-to-place".
        - Scroll views can appear on tab controls.
----------------------------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: November 10th 2024
    Bugfixes:
        - Cybersyn now doesn't crash on load.
----------------------------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: November 10th 2024
    Features:
        - (SA) Process accessibilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
        - (SA) Add support for the capture-spawner technology trigger.