@@ -19,6 +19,7 @@ Version:
 Date:
     Fixes:
         - "Map generated" entities that don't generate in any locations could break automation analysis.
+        - Recipes that are referenced without being defined do not prevent YAFC from loading.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.4.0
 Date: November 21st 2024
